--- a/Kline/WebContent/resources/css/main.css
+++ b/Kline/WebContent/resources/css/main.css
@@ -15,7 +15,15 @@ body{
 	margin-bottom: 1vh;
 }
 
-.containter{
+.container{
 	width: 100%;
+}
+
+.footer{
+	width: 100%;
+	height: 10vh;
+	background: #2c2c2c;
+	position: fixed;
+	bottom: 0;
 }
 
