--- a/Kline/WebContent/resources/css/main.css
+++ b/Kline/WebContent/resources/css/main.css
@@ -2,11 +2,13 @@ body{
 	font-family: "Microsoft YaHei","÷ÚÌו","ËÎÌו",sans-serif;
 	margin: 0;
 	padding: 0;
+	border: 0;
 }
 
 .head{
 	background: #e44d42;
 	text-align: center;
+	width: 100%;
 }
 
 .head .head-content img{
