--- a/Kline/WebContent/resources/css/main.css
+++ b/Kline/WebContent/resources/css/main.css
@@ -29,3 +29,25 @@ body{
 	bottom: 0;
 }
 
+
+.big-value{
+	font-size: 3.3em;
+}
+
+.medium-value{
+	font-size: 2.4em;
+}
+
+
+.small-value{
+	font-size: 1.9em;
+}
+
+.green-value{
+	color: green;
+}
+
+.red-value{
+	color: red;
+}
+
