--- a/Kline/WebContent/resources/css/main.css
+++ b/Kline/WebContent/resources/css/main.css
@@ -8,16 +8,18 @@ body{
 .head{
 	background:  #2c2c2c;
 	text-align: center;
+	box-shadow: 2px 2px 2px 2px #928d8d;
 	width: 100%;
 }
 
 .head .head-content{
-	padding-top: 1vh;
+	padding-top: 1.5vh;
 	padding-bottom: 0.4vh;
+	height: 6.5vh;
 }
 
 .head .head-content img{
-	width: 80vw;
+	height: 5vh;
 }
 
 .head .head-content span{
@@ -36,20 +38,22 @@ body{
 
 .footer{
 	width: 100%;
-	height: 10vh;
+	height: 9vh;
+	box-shadow: 2px 2px 2px 2px #928d8d;
 	background: #2c2c2c;
 	position: fixed;
 	bottom: 0;
 }
 
 .footer .foot-logos{
-	padding-top: 0.5vh;
+	padding-top: 1.3vh;
+	height: 9.5vh;
 }
 
 .footer .foot-logos img{
-	height: 10vh;
-	margin-left: 3.1vw;
-	margin-right: 3.1vw;
+	height: 8.2vh;
+	margin-left: 6vw;
+	margin-right: 4vw;
 }
 
 .big-value{
@@ -77,3 +81,9 @@ body{
 	color: #f74242;	
 }
 
+#head-search{
+	position: absolute;
+	top: 1.5vh;
+	right: 3vw;
+	height: 5vh;
+}
